:bug: Fix Scrollbar not min-height: 100%

--- a/packages/peper-ui/client/css/peper.css
+++ b/packages/peper-ui/client/css/peper.css
@@ -4237,7 +4237,7 @@ section {
   src: local("Roboto Black Italic"), local("Roboto-BlackItalic"), url(../fonts/bmC0pGMXrhphrZJmniIZpY4P5ICox8Kq3LLUNMylGO4.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
 .color-primary {
-  color: #3367d6 !important; }
+  color: #1b83fd !important; }
 
 .color-primary-50 {
   color: white !important; }
@@ -4246,28 +4246,28 @@ section {
   color: theme-primary-100 !important; }
 
 .color-primary-200 {
-  color: #a1b9ec !important; }
+  color: #9ecafe !important; }
 
 .color-primary-300 {
-  color: #668de0 !important; }
+  color: #58a4fe !important; }
 
 .color-primary-400 {
-  color: #4c7adb !important; }
+  color: #3993fd !important; }
 
 .color-primary-500 {
-  color: #3367d6 !important; }
+  color: #1b83fd !important; }
 
 .color-primary-600 {
-  color: #2759c3 !important; }
+  color: #0273f7 !important; }
 
 .color-primary-700 {
-  color: #224daa !important; }
+  color: #0265d9 !important; }
 
 .color-primary-800 {
-  color: #1d4290 !important; }
+  color: #0257bb !important; }
 
 .color-primary-900 {
-  color: #183677 !important; }
+  color: #01499c !important; }
 
 .color-accent {
   color: #e91e63 !important; }
@@ -5128,37 +5128,37 @@ section {
   color: #ffffff !important; }
 
 .background-theme {
-  background: #3367d6 !important; }
+  background: #1b83fd !important; }
 
 .background-theme-50 {
   background: white !important; }
 
 .background-theme-100 {
-  background: #d0dcf6 !important; }
+  background: #d6e9ff !important; }
 
 .background-theme-200 {
-  background: #a1b9ec !important; }
+  background: #9ecafe !important; }
 
 .background-theme-300 {
-  background: #668de0 !important; }
+  background: #58a4fe !important; }
 
 .background-theme-400 {
-  background: #4c7adb !important; }
+  background: #3993fd !important; }
 
 .background-theme-500 {
-  background: #3367d6 !important; }
+  background: #1b83fd !important; }
 
 .background-theme-600 {
-  background: #2759c3 !important; }
+  background: #0273f7 !important; }
 
 .background-theme-700 {
-  background: #224daa !important; }
+  background: #0265d9 !important; }
 
 .background-theme-800 {
-  background: #1d4290 !important; }
+  background: #0257bb !important; }
 
 .background-theme-900 {
-  background: #183677 !important; }
+  background: #01499c !important; }
 
 .background-theme-accent {
   background: #e91e63 !important; }
@@ -6618,9 +6618,9 @@ button.raised-button, a.raised-button {
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
   button.raised-button.primary, a.raised-button.primary {
     color: #ffffff;
-    background: #3367d6; }
+    background: #1b83fd; }
     button.raised-button.primary.hover, a.raised-button.primary.hover {
-      background: #2759c3; }
+      background: #0273f7; }
   button.raised-button.accent, a.raised-button.accent {
     color: #212121;
     background: #e91e63; }
@@ -6645,7 +6645,7 @@ button.flat-button, a.flat-button {
   button.flat-button.hover, button.flat-button:focus, a.flat-button.hover, a.flat-button:focus {
     background: rgba(0, 0, 0, 0.1); }
   button.flat-button.primary, a.flat-button.primary {
-    color: #3367d6; }
+    color: #1b83fd; }
   button.flat-button.accent, a.flat-button.accent {
     color: #e91e63; }
   button.flat-button.white, a.flat-button.white {
@@ -6662,7 +6662,7 @@ button.color-button, a.color-button {
   background: #212121;
   color: #ffffff; }
   button.color-button.primary, a.color-button.primary {
-    background: #3367d6; }
+    background: #1b83fd; }
   button.color-button.accent, a.color-button.accent {
     background: #e91e63; }
   button.color-button.white, a.color-button.white {
@@ -6671,7 +6671,7 @@ button.color-button, a.color-button {
   button.color-button.hover, button.color-button:focus, a.color-button.hover, a.color-button:focus {
     background: #424242; }
     button.color-button.hover.primary, button.color-button:focus.primary, a.color-button.hover.primary, a.color-button:focus.primary {
-      background: #2759c3; }
+      background: #0273f7; }
     button.color-button.hover.accent, button.color-button:focus.accent, a.color-button.hover.accent, a.color-button:focus.accent {
       background: #d81b60; }
     button.color-button.hover.white, button.color-button:focus.white, a.color-button.hover.white, a.color-button:focus.white {
@@ -6685,7 +6685,7 @@ button.color-button, a.color-button {
     box-shadow: none;
     pointer-events: none; }
     button.color-button:disabled.primary, button.color-button.disabled.primary, button.color-button.disabled:focus.primary, button.color-button.disabled.hover.primary, a.color-button:disabled.primary, a.color-button.disabled.primary, a.color-button.disabled:focus.primary, a.color-button.disabled.hover.primary {
-      background: #668de0; }
+      background: #58a4fe; }
     button.color-button:disabled.accent, button.color-button.disabled.accent, button.color-button.disabled:focus.accent, button.color-button.disabled.hover.accent, a.color-button:disabled.accent, a.color-button.disabled.accent, a.color-button.disabled:focus.accent, a.color-button.disabled.hover.accent {
       background: #f06292; }
     button.color-button:disabled.white, button.color-button.disabled.white, button.color-button.disabled:focus.white, button.color-button.disabled.hover.white, a.color-button:disabled.white, a.color-button.disabled.white, a.color-button.disabled:focus.white, a.color-button.disabled.hover.white {
@@ -6881,9 +6881,9 @@ button.color-button, a.color-button {
     box-shadow: none;
     pointer-events: none; }
   .peper-icon-button.primary {
-    color: #3367d6; }
+    color: #1b83fd; }
     .peper-icon-button.primary .ripple-circle {
-      background: #a1b9ec; }
+      background: #9ecafe; }
     .peper-icon-button.primary:hover, .peper-icon-button.primary.hover, .peper-icon-button.primary:focus {
       background: rgba(63, 81, 181, 0.2); }
     .peper-icon-button.primary.pressed {
@@ -7063,7 +7063,7 @@ button.color-button, a.color-button {
   .peper-side-navigation .peper-side-navigation-profile {
     width: 100%;
     height: 96px;
-    background: #668de0;
+    background: #58a4fe;
     padding: 24px 16px;
     background-image: url(/packages/skynightz93_peper-ui/client/img/back1.png);
     background-position: center;
@@ -7173,11 +7173,11 @@ button.color-button, a.color-button {
         margin-bottom: 15px;
         background: #eeeeee; }
       .peper-side-navigation .peper-side-navigation-content .nav-item.router-link-active .nav-list {
-        color: #3367d6; }
+        color: #1b83fd; }
         .peper-side-navigation .peper-side-navigation-content .nav-item.router-link-active .nav-list .mdi {
-          color: #3367d6; }
+          color: #1b83fd; }
         .peper-side-navigation .peper-side-navigation-content .nav-item.router-link-active .nav-list .chevron svg {
-          fill: #3367d6; }
+          fill: #1b83fd; }
       .peper-side-navigation .peper-side-navigation-content .nav-item.router-link-active .ripple-circle {
         background: rgba(63, 81, 181, 0.2) !important; }
   .peper-side-navigation.active {
